--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,16 +4,15 @@ container:
   memory: 10G
 
 check_android_task:
-  create_device_script: >
-    echo no | avdmanager create avd --force \
-        -n test \
-        -k "system-images;android-29;default;armeabi-v7a"
-  start_emulator_background_script: >
-    $ANDROID_HOME/emulator/emulator \
-        -avd test \
-        -no-audio \
-        -no-window
-  assemble_script: ./gradlew assemble assembleAndroidTest
+  create_device_script:
+    echo no | avdmanager create avd --force
+    -n test
+    -k "system-images;android-29;default;armeabi-v7a"
+  start_emulator_background_script:
+    $ANDROID_HOME/emulator/emulator
+    -avd test
+    -no-audio
+    -no-window
   wait_for_emulator_script:
     - adb wait-for-device
     - adb shell input keyevent 82
