--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,9 +5,9 @@ container:
 
 check_android_task:
   create_device_script:
-    echo no | avdmanager create avd --force
+    echo no | sdkmanager --list && avdmanager create avd --force
     -n test
-    -k "system-images;android-29;default;x86_64"
+    -k "system-images;android-25;google_apis;x86"
   start_emulator_background_script:
     $ANDROID_HOME/emulator/emulator
     -avd test
