--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,7 +7,7 @@ check_android_task:
   create_device_script:
     echo no | sdkmanager --list && avdmanager create avd --force
     -n test
-    -k "system-images;android-25;google_apis;x86"
+    -k "system-images;android-30;default;x86_64"
   start_emulator_background_script:
     $ANDROID_HOME/emulator/emulator
     -avd test
