--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,6 +4,8 @@ container:
   memory: 10G
 
 check_android_task:
+  install_emulator_script:
+    sdkmanager --install "system-images;android-29;default;x86_64"
   create_device_script:
     echo no | sdkmanager --list && avdmanager create avd --force
     -n test
