--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -14,6 +14,7 @@ check_android_task:
     echo no | avdmanager create avd --force
     -n test
     -k "system-images;android-29;default;x86_64"
+  accel_check_script: emulator -accel-check
   start_emulator_background_script:
     $ANDROID_HOME/emulator/emulator
     -avd test
