--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,18 +1,21 @@
-container:
-  image: cirrusci/android-sdk:29
-  kvm: true
-  cpu: 8
-  memory: 24G
-
 check_android_task:
   name: Run Android instrumented tests
+
+  container:
+    image: cirrusci/android-sdk:29
+    kvm: true
+    cpu: 8
+    memory: 24G
+
+  accel_check_script:
+    - sudo chown cirrus:cirrus /dev/kvm
+    - emulator -accel-check
   install_emulator_script:
     sdkmanager --install "system-images;android-29;default;x86_64"
   create_device_script:
     echo no | avdmanager create avd --force
     -n test
     -k "system-images;android-29;default;x86_64"
-  accel_check_script: emulator -accel-check
   start_emulator_background_script:
     $ANDROID_HOME/emulator/emulator
     -avd test
