--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,5 +1,6 @@
 check_android_task:
   name: Run Android instrumented tests
+  allow_failures: true
 
   container:
     image: cirrusci/android-sdk:30
@@ -29,3 +30,5 @@ check_android_task:
     adb shell settings put global transition_animation_scale 0.0
     adb shell settings put global animator_duration_scale 0.0
   check_script: ./gradlew connectedDebugAndroidTest
+  publish_report_artifacts:
+    path: "app/build/reports/androidTests/connected/*"
