--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -30,5 +30,6 @@ check_android_task:
     adb shell settings put global transition_animation_scale 0.0
     adb shell settings put global animator_duration_scale 0.0
   check_script: ./gradlew connectedDebugAndroidTest
-  publish_report_artifacts:
-    path: "app/build/reports/androidTests/connected/*"
+  always:
+    publish_report_artifacts:
+      path: "app/build/reports/androidTests/connected/*"
