--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -32,3 +32,5 @@ check_android_task:
   on_failure :
     publish_report_artifacts:
       path: "app/build/reports/androidTests/connected/**/*"
+    echo_artifacts_url_script:
+      echo "artifacts url - https://api.cirrus-ci.com/v1/artifact/build/$CIRRUS_BUILD_ID/publish_report.zip"
