--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,5 +1,6 @@
 check_android_task:
   name: Run Android instrumented tests
+  only_if: $CIRRUS_PR != '' && $CIRRUS_BASE_BRANCH == $CIRRUS_DEFAULT_BRANCH
 
   container:
     image: cirrusci/android-sdk:30
@@ -33,4 +34,4 @@ check_android_task:
     publish_report_artifacts:
       path: "app/build/reports/androidTests/connected/**/*"
     echo_artifacts_url_script:
-      echo "artifacts url - https://api.cirrus-ci.com/v1/artifact/build/$CIRRUS_BUILD_ID/publish_report.zip"
+      echo "artifacts url - https://api.cirrus-ci.com/v1/artifact/build/$CIRRUS_BUILD_ID/publish_report.zip" && return 1
