--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -36,7 +36,7 @@ check_android_task:
   on_failure :
     publish_report_artifacts:
       path: "app/build/reports/androidTests/connected/**/*"
-    pull_screenshots_script:
+    pull_screenshots_script: |
       mkdir screenshots
       adb root
       adb pull $SCREENSHOTS_ROOT_DIR screenshots
