--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -32,13 +32,9 @@ check_android_task:
     adb shell settings put global window_animation_scale 0.0
     adb shell settings put global transition_animation_scale 0.0
     adb shell settings put global animator_duration_scale 0.0
-  check_script: ./gradlew connectedDebugAndroidTest
+  check_script: ./gradlew connectedDebugAndroidTest || mkdir screenshots && adb root && adb pull $SCREENSHOTS_ROOT_DIR screenshots && return 1
   on_failure :
     publish_report_artifacts:
       path: "app/build/reports/androidTests/connected/**/*"
-    pull_screenshots_script: |
-      mkdir screenshots
-      adb root
-      adb pull $SCREENSHOTS_ROOT_DIR screenshots
     publish_screenshots_artifacts:
-      path: "$SCREENSHOTS_ROOT_DIR/**/*"
+      path: "screenshots/**/*"
