--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,7 +1,7 @@
 check_android_task:
   name: Run Android instrumented tests
   only_if: $CIRRUS_PR != '' && $CIRRUS_BASE_BRANCH == $CIRRUS_DEFAULT_BRANCH
-  skip: $CIRRUS_PR_LABELS =~ no_ui_testing_required
+  skip: $CIRRUS_PR_LABELS =~ 'no_ui_testing_required'
 
   env:
     SCREENSHOTS_ROOT_DIR: /data/data/ru.nikitae57.cirrussandbox/files/screenshots
