Trying pulling screenshots

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,15 +2,14 @@ check_android_task:
   name: Run Android instrumented tests
   env:
     SCREENSHOTS_ROOT_DIR: /data/data/ru.nikitae57.cirrussandbox/files/screenshots
-  skip: $CIRRUS_PR_LABELS =~ 'no_ui_testing_required'
-  only_if: $CIRRUS_PR != '' && $CIRRUS_BASE_BRANCH == $CIRRUS_DEFAULT_BRANCH
+  skip: $CIRRUS_PR_LABELS =~ ".*no_ui_testing_required.*"
+  only_if: $CIRRUS_PR != '' && $CIRRUS_BASE_BRANCH == 'master'
 
   container:
     image: cirrusci/android-sdk:30
     kvm: true
     cpu: 6
     memory: 24G
-
   licenses_script:
     echo yes | sdkmanager --licenses
   install_emulator_script:
