--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -30,8 +30,6 @@ check_android_task:
   install_emulator_script:
     # x86_64 somehow affect the "call" test
     sdkmanager --install "system-images;android-30;google_apis;x86"
-  restart_adb_as_root_script:
-    adb root
   create_avd_script:
     echo no | avdmanager create avd --force
     -n emulator
@@ -48,6 +46,9 @@ check_android_task:
     ./gradlew assembleDebugAndroidTest
   wait_for_avd_script:
     adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 3; done; input keyevent 82'
+  restart_adb_as_root_script:
+    adb root
+    sleep 10
   configure_avd_script: |
     adb shell settings put global window_animation_scale 0.0
     adb shell settings put global transition_animation_scale 0.0
