--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -46,9 +46,6 @@ check_android_task:
     ./gradlew assembleDebugAndroidTest
   wait_for_avd_script:
     adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 3; done; input keyevent 82'
-  restart_adb_as_root_script:
-    adb root
-    sleep 10
   configure_avd_script: |
     adb shell settings put global window_animation_scale 0.0
     adb shell settings put global transition_animation_scale 0.0
@@ -60,6 +57,7 @@ check_android_task:
   run_tests_script:
     ./gradlew connectedDebugAndroidTest || true
   pull_screenshots_script: |
+    adb root && adb devices
     mkdir sample_screenshots
     adb pull $SCREENSHOTS_ROOT_DIR sample_screenshots
     mkdir tutorial_screenshots
