--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -57,9 +57,9 @@ check_android_task:
   run_tests_script:
     ./gradlew connectedDebugAndroidTest || true
   pull_screenshots_script: |
-    adb root && adb devices
+    adb root
     mkdir sample_screenshots
-    adb pull $SCREENSHOTS_ROOT_DIR sample_screenshots
+    for i in {1..25}; do adb pull $SCREENSHOTS_ROOT_DIR sample_screenshots && break || sleep 5; done
     mkdir tutorial_screenshots
     adb pull $TUTORIAL_SCREENSHOTS_ROOT_DIR tutorial_screenshots
     mkdir allure_screenshots
